--- a/templates/mixtral-8x7b-code-interpreter-nextjs/app/globals.css
+++ b/templates/mixtral-8x7b-code-interpreter-nextjs/app/globals.css
@@ -2,18 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+body {
+  height: 100vh;
+  width: 100%;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+pre {
+  margin: 8px 0;
+  overflow-x: auto;
+  border-radius: 4px;
+  font-size: 14px;
+}
+
+p > code, li > code {
+  background: #282c34;
+  color: #abb2bf;
+  font-size: 14px;
+  padding: 2px 6px;
+  border-radius: 4px;
+}
+
+ol {
+  list-style-type: decimal;
+  padding: 8px 18px;
+}
+
+ol > li {
+  font-weight: 500;
 }
